--- a/Documents/programas en c/latex/files.tex
+++ b/Documents/programas en c/latex/files.tex
@@ -1,5 +1,5 @@
 \section{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{{\bf laboratorio.\+c} \\*Main funcion principal para definir variables y operaciones }{\pageref{laboratorio_8c}}{}
+\item\contentsline{section}{\hyperlink{laboratorio_8c}{laboratorio.\+c} \\*Funcion principal para definir variables y operaciones }{\pageref{laboratorio_8c}}{}
 \item\contentsline{section}{{\bfseries main.\+c} }{\pageref{main_8c}}{}
 \end{DoxyCompactList}
